# arftracksat

./: .gitignore  CMakeLists.txt  README.md  SatViewerPlugin.pro  arftracksat.pro  config.json  copy.sh  dependencies.txt  flake.nix  installer  makedeb.sh
.github/workflows/: cmake.yml
assets/: earth.mtl  map.json
common/: graphics.cpp  graphics.hpp  sat.cpp  sat.hpp  sysutil.hpp  types-defs.hpp  util.hpp
common/sgdp4/: sgdp4-types.h  sgdp4.h  tle.c
common/sgdp4/sigutils/: block.h  lib.c  log.c  log.h  property.h  sigutils.h  types.h  version.h
core/: sat.cpp  sat.hpp
main/: CMakeLists.txt  main.cpp  main.hpp  util.cpp
plugin/: CMakeLists.txt  SatViewerWidget.cpp  SatViewerWidget.hpp  SatViewerWidgetFactory.cpp  SatViewerWidgetFactory.hpp
representation/: asset_loader.cpp  asset_loader.hpp  colors.hpp  glutil.cpp  glutil.hpp  graphic_util.cpp  graphic_util.hpp  graphics.cpp  graphics.hpp  representation.cpp  representation.hpp  shapes.hpp  textrenderer.cpp  textrenderer.hpp  tiny_obj_loader.h
representation/glad/: glad.c
representation/glad/include/glad/: glad.h
representation/legacy_gl_ui/: legacy_gl_ui.cpp  legacy_gl_ui.hpp
representation/shaders/: line.fs  line.vs  text.fs  text.vs
src/: CMakeLists.txt  cleanbuild.sh  graphics.cpp  graphics.hpp  main.cpp  main.h  main.hpp  mainwindow.cpp  mainwindow.ui  representationwidget.cpp  representationwidget.h  sat.cpp  sat.hpp  shapes.hpp  sysutil.cpp  util.cpp
src/sgdp4/: coord.c  predict.c
src/sgdp4/sigutils/: types.h
src/sgp4/lib/: SGP4_Open_License.txt  libifcoremt.so.5  libifport.so.5  libintlc.so.5
src/sgp4/sgp4/services/: DllMainDll_Service.c  DllMainDll_Service.h  DllUtils.c  DllUtils.h  TimeFuncDll_Service.c  TimeFuncDll_Service.h
src/sgp4/sgp4/wrappers/: AstroFuncDll.c  AstroFuncDll.h  DllMainDll.c  DllMainDll.h  EnvConstDll.c  EnvConstDll.h  Sgp4PropDll.c  Sgp4PropDll.h  TimeFuncDll.c  TimeFuncDll.h  TleDll.c  TleDll.h
